--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <title>Ascii</title>
-    <script src="AsciiJ.js"></script>
+   
 </head>
 <body>
     <h1><center>Tabla ASCII</center></h1>
@@ -16,3 +16,5 @@
     <input type="text" id="a">
     <input type="button" onclick="miFuncion2()" value="encriptar">       
     <p id="b">Su palabra codificada es:</p>
+     <script src="Script.js"></script>
+</body>
